[package]
name = "FProxy"
version = "0.1.0"
authors = ["zhylmzr <zhylmzr@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1"
httparse = "1.3.4"
openssl = "0.10.31"
tiny_http = { version = "0.7.0", features = ["ssl"] }
tokio = { version = "1", features = ["full"] }
ureq = "2.0.0-rc2"
